Final da 2a sprint

--- a/themes/store/style.css
+++ b/themes/store/style.css
@@ -46,6 +46,14 @@ and Blueprint http://www.blueprintcss.org/
 	12.2 Galleries
 --------------------------------------------------------------*/
 
+
+.red{ color: #cc0000;}
+input.search-field {
+    border-radius: 0;
+    padding: 8px;
+    width: 600px;
+}
+
 /*--------------------------------------------------------------
 1.0 Reset
 --------------------------------------------------------------*/
